feat: Implement security audit aspect for logging user login attempts and registrations